--- a/public/style.css
+++ b/public/style.css
@@ -1,10 +1,51 @@
-    * { margin: 0; padding: 0; box-sizing: border-box; }
-      body { font: 13px Helvetica, Arial; }
-      form { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
-      form input { border: 0; padding: 10px; width: 90%; margin-right: .5%; }
-      form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; }
-      #messages { list-style-type: none; margin: 0; padding: 0; }
-      #messages li { padding: 5px 10px; }
-      #messages li:nth-child(odd) { background: #eee; }
+/*.soundwave {
+  background-image: url('waveimage.jpg');
+  background-image: 
+}*/
 
-    
+h1, h2, h3 {
+  font-family: 'Bree Serif', serif; 
+}
+
+
+
+body {
+  font-family: 'Open Sans', sans-serif;
+}
+
+h1 {
+  color: white;
+  padding-left: 5%;
+  padding-bottom: 5%;
+}
+
+.navbar-default {
+  background-color: #000000;
+}
+
+.musicians-box {
+  float: left;
+  width: 290px;
+  height: 350px;
+  margin-left: 25%;
+  margin-top: 10%;
+}
+
+.chatroom-box {
+
+  display: inline-block;
+  height: 350px;
+  width: 720px;
+  margin-left: 7%;
+  margin-top: 10%;
+}
+
+input, button, select, textarea {
+  line-height: 3;
+}
+   
+#info {
+  margin: 15%; 
+} 
+
+  
